force-app/main/default/objects/TrackedStock__c/TrackedStock__c.object-meta.xml
<CustomObject>
    <pluralLabel>Tracked Stocks</pluralLabel>
    <fullName>TrackedStock__c</fullName>
    <description>Represents a stock symbol being monitored for price changes and alert thresholds</description>
    <nameField>
        <label>Stock Record Name</label>
        <type>AutoNumber</type>
        <displayFormat>STK-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <label>Tracked Stock</label>
</CustomObject>