force-app/main/default/objects/TrackedStock__c/fields/AlertHighThreshold__c.field-meta.xml
<CustomField>
    <fullName>AlertHighThreshold__c</fullName>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <inlineHelpText>Set the maximum price threshold. You'll receive an alert when the stock price goes above this value.</inlineHelpText>
    <description>Price level that triggers a high-price alert when exceeded.</description>
    <label>Alert High Threshold</label>
</CustomField>