force-app/main/default/objects/TrackedStock__c/fields/AlertLowThreshold__c.field-meta.xml
<CustomField>
    <fullName>AlertLowThreshold__c</fullName>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <inlineHelpText>Set the minimum price threshold. You'll receive an alert when the stock price drops below this value.</inlineHelpText>
    <description>Price level that triggers a low-price alert when stock falls below this value</description>
    <label>Alert Low Threshold</label>
</CustomField>