force-app/main/default/objects/TrackedStock__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>The Official company name</inlineHelpText>
    <description>The full legal name of the publicly traded company</description>
    <label>Company Name</label>
</CustomField>