force-app/main/default/objects/TrackedStock__c/fields/CurrentPrice__c.field-meta.xml
<CustomField>
    <fullName>CurrentPrice__c</fullName>
    <type>Currency</type>
    <precision>14</precision>
    <scale>4</scale>
    <inlineHelpText>Automatically updated from real-time stock data. Prices stored with 4 decimal places.</inlineHelpText>
    <description>The most recent stock price in USD</description>
    <label>Current Price</label>
</CustomField>