force-app/main/default/objects/TrackedStock__c/fields/LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>LastUpdated__c</fullName>
    <type>DateTime</type>
    <inlineHelpText>Shows when the stock price was last refreshed. Typically updated during market hours.</inlineHelpText>
    <description>Timestamp of the most recent price data update from external API.</description>
    <label>Last Updated</label>
</CustomField>