force-app/main/default/objects/TrackedStock__c/fields/PreviousPrice__c.field-meta.xml
<CustomField>
    <fullName>PreviousPrice__c</fullName>
    <type>Currency</type>
    <precision>14</precision>
    <scale>4</scale>
    <inlineHelpText>Used to calculate price changes and determine if stock is trending up, down, or stable.</inlineHelpText>
    <description>The previous closing price used for comparison and trend analysis</description>
    <label>Previous Price</label>
</CustomField>