force-app/main/default/objects/TrackedStock__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <type>Picklist</type>
    <inlineHelpText>Automatically calculated: Up (price increased), Down (price decreased), or Stable (no change)</inlineHelpText>
    <description>Current price trend status based on comparison with previous price</description>
    <label>Status</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
</CustomField>