force-app/main/default/objects/TrackedStock__c/fields/StockSymbol__c.field-meta.xml
<CustomField>
    <fullName>StockSymbol__c</fullName>
    <type>Text</type>
    <length>10</length>
    <inlineHelpText>Official unique stock ticker symbol </inlineHelpText>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Unique stock ticker symbol used to identify the security in external APIs and trading system</description>
    <label>Stock Symbol</label>
</CustomField>